<resources>
    <string name="app_name">CITY SIGHTS</string>
    <string name="splash_screen_string">CITY SIGHTS</string>
    <string name="admin_emailid">admin@citisight.com</string>
    <string name="enter_email_address">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="admin_login">Admin Login</string>
    <string name="login_button">LOG IN</string>
    <string name="user_name">Enter name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="user_registered">The registration was successful, we are redirecting you to login screen. Please Log in again to access the application</string>
    <string name="user_already_registered">The user is already registered with this email id</string>
    <string name="welcome_dashboard">WELCOME TO THE DASHBOARD</string>
    <string name="admin_email">email: admin@citisight.com</string>
    <string name="registration_error">There was an error while registering, please try again and make sure, the data is correct</string>
    <string name="location" />
    <string name="location_information" />
    <string name="admin_dashboard">ADMIN DASHBOARD</string>
    <string name="enter_address">Enter Address</string>
</resources>