<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.appcompat.widget.LinearLayoutCompat 
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_email_24"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter_email_address"
            app:hintTextColor="@color/red"
            android:textColorHint="@color/red">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_lock_24"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter_password"
            app:hintTextColor="@color/red"
            android:textColorHint="@color/red">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/user_login"
        android:layout_width="120dp"
        android:gravity="center"
        android:onClick="LogIn"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_red"
        android:background="@color/light_red"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:text="@string/login_button"
        android:padding="2dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_error"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="ForgotPassword"
        android:text="@string/forgot_password"
        android:textSize="15dp"
        android:textColor="@color/red"
        android:layout_marginTop="12dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="Don't have an account?"
        android:textColor="@color/black"
        android:textSize="12dp"/>
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="signUp"
        android:textSize="18dp"
        android:textColor="@color/red"
        android:text="Sign up"/>

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>